--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SHOPIFY_KEY=0a27b4a1f13d313668bec4243dba214b
+SHOPIFY_SECRET=7ba53a97510219953103ec808d2864f9
+SHOPIFY_REDIRECT=https://e0907e35.ngrok.io/shopify/oauth/authorize
+SHOPIFY_SHOP=ravi-web-store.myshopify.com
