--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/framework": "^6.2",
         "laravel/socialite": "^4.2",
         "laravel/tinker": "^1.0",
-        "laravel/ui": "^1.1"
+        "laravel/ui": "^1.1",
+        "socialiteproviders/shopify": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
